# jarvis-ai-assistent

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  config.py  jarvis_log.db
archive/: jarvis_remote.py  jarvis_remote2.py
home_agent/: .env.example  pyproject.toml  run_agent.py
home_agent/app/: __init__.py  main.py  telegram_bot.py
home_agent/app/core/: ai_interpreter.py  audit_log.py  config.py  module_base.py  registry.py
home_agent/app/modules/: cursor_module.py  kali_module.py  system_module.py  windows_module.py
